<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="12dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingRight="12dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/RecieveDateWrapper"
            style="@style/CustomDateField">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/itemReceivedLabel"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_weight="1" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="end"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/ReceiveDate"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:focusable="true" android:focusableInTouchMode="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/itemDonatorLabel"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/Donator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:singleLine="true"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/itemProducerLabel"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/Producer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:singleLine="true"
                android:inputType="text" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/CustomDateField"
                android:id="@+id/DateFromWrapper">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/itemDatingFromLabel"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/DateFrom"
                    android:textColor="#000000"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/CustomDateField"
                android:id="@+id/DateToWrapper">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/itemDatingToLabel"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/DateTo"
                    android:textColor="#000000"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>
