<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="false"
    android:gravity="bottom"
    android:weightSum="1">

        <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:text="@string/itemDescriptionLabel"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/itemDescription" />

            </LinearLayout>
        </ScrollView>


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/linearLayout"
        android:layout_weight="0">

            <ImageButton
                android:id="@+id/recButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_mic_white_48dp"
                android:background="@drawable/roundbutton"
                android:maxHeight="60dp"
                android:minHeight="60dp"
                android:maxWidth="60dp"
                android:minWidth="60dp"
                android:contentDescription="@string/recordButtonDescription" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/black" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="end">

                        <ImageButton
                            android:id="@+id/prevButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:background="@null"
                            android:maxWidth="36dp"
                            android:maxHeight="36dp"
                            android:scaleType="fitCenter"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_skip_previous_black_48dp"
                            android:contentDescription="@string/prevButtonDescription" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical|center_horizontal">

                        <ImageButton
                            android:id="@+id/playButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@null"
                            android:src="@drawable/ic_play_circle_outline_black_48dp"
                            android:contentDescription="@string/playSoundButtonDescription" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="start">

                        <ImageButton
                            android:id="@+id/nextButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:adjustViewBounds="true"
                            android:maxWidth="36dp"
                            android:maxHeight="36dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_skip_next_black_48dp"
                            android:layout_gravity="center_vertical"
                            android:contentDescription="@string/nextButtonDescription" />
                    </LinearLayout>
                </LinearLayout>

                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/seekBar"
                    android:clickable="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:id="@+id/posText" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:id="@+id/audioText"
                        android:layout_weight="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:id="@+id/durText" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>


</LinearLayout>